Store worker target repository relationship natively in PostgreSQL
